--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <!-- Font Style sheet -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- Animation -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="./styles/style.css">
 </head>
@@ -31,10 +37,12 @@
         <div class="banner">
 
             <div class="banner-details">
-                <h2 class="banner-title">Brand New
+                <h2 class="banner-title">Brand New <br>
                     Group of Architects
                 </h2>
-                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
                 <button class="primary-btn">Explore More</button>
             </div>
             <div class="banner-image">
@@ -48,17 +56,20 @@
         <!-- Feature Section -->
         <section>
             <div class="feature">
-                <div class="feature-image">
-                    <img src="./images/team1.png" alt="">
+                <div class="feature-image animate__animated animate__heartBeat">
+                    <img  src="./images/team1.png" alt="">
                     <img src="./images/team2.png" alt="">
                     <img src="./images/team3.png" alt="">
                     <img src="./images/team4.png" alt="">
                 </div>
 
                 <div class="feature-description">
-                      <h3 class="section-title"> <span class="feature-title-style1">Quick list</span> of Our <span class="feature-title-style2">Features</span></h3>
-                      <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                      <button class="primary-btn">Explore More</button>
+                    <h3 class="section-title"> <span class="feature-title-style1">Quick list</span> of Our <span
+                            class="feature-title-style2">Features</span></h3>
+                    <p class="section-description">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised words
+                        which don't look even</p>
+                    <button class="primary-btn">Explore More</button>
                 </div>
             </div>
         </section>
@@ -66,37 +77,106 @@
         <section>
             <div class="all-features container">
 
-              <div class="all-features-description">
-                  <h1 class="section-title">Features you <br> will love & enjoy</h1>
-                  <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="all-features-description">
+                    <h1 class="section-title">Features you <br> will love & enjoy</h1>
+                    <p class="section-description">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised words
+                        which don't look even</p>
 
-                  <div class="feature-lists">
-                       <div class="feature-list">
-                          <h2 class="feature-list-title">Desktop & Mobile Version</h2>
-                          <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                       </div>
-                       <div class="feature-list">
-                          <h2 class="feature-list-title">Desktop & Mobile Version</h2>
-                          <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                       </div>
-                       <div class="feature-list">
-                          <h2 class="feature-list-title">Desktop & Mobile Version</h2>
-                          <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                       </div>
-                       <div class="feature-list">
-                          <h2 class="feature-list-titile">Desktop & Mobile Version</h2>
-                          <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                       </div>
-                       
-                  </div>
-              </div>
-              <div class="feature-image">
+                    <div class="feature-lists">
+                        <div class="feature-list">
+                            <h2 class="feature-list-title">Desktop & Mobile Version</h2>
+                            <p class="section-description">There are many variations of passages of Lorem Ipsum
+                                available, but the majority have suffered alteration in some form, by injected humour,
+                                or randomised...........</p>
+                        </div>
+                        <div class="feature-list">
+                            <h2 class="feature-list-title">Desktop & Mobile Version</h2>
+                            <p class="section-description">There are many variations of passages of Lorem Ipsum
+                                available, but the majority have suffered alteration in some form, by injected humour,
+                                or randomised...........</p>
+                        </div>
+                        <div class="feature-list">
+                            <h2 class="feature-list-title">Desktop & Mobile Version</h2>
+                            <p class="section-description">There are many variations of passages of Lorem Ipsum
+                                available, but the majority have suffered alteration in some form, by injected humour,
+                                or randomised...........</p>
+                        </div>
+                        <div class="feature-list">
+                            <h2 class="feature-list-titile">Desktop & Mobile Version</h2>
+                            <p class="section-description">There are many variations of passages of Lorem Ipsum
+                                available, but the majority have suffered alteration in some form, by injected humour,
+                                or randomised...........</p>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="feature-image">
 
                     <img src="./images/architect.png" alt="">
-              </div>
+                </div>
             </div>
         </section>
+
+        <div class="experience-container">
+            <div class="experience">
+                <h2 class="experience-title">10+Year</h2>
+                <p class="experience-description">Experience</p>
+            </div>
+        </div>
+        
+        <div class="fact">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration.</p>
+        </div>
+        <!-- service section -->
+
+        <section>
+              <div class="services">
+                <div class="service">
+                    <img src="./images/icons/ribon.png" alt="">
+                    <h2 class="section-title">54</h2>
+                    <p class="section-description">Awards Winnings</p>
+                </div>
+                <div class="service">
+                    <img src="./images/icons/projects.png" alt="">
+                    <h2 class="section-title">1458</h2>
+                    <p class="section-description"> Project Finished</p>
+                </div>
+                <div class="service">
+                    <img src="./images/icons/customers.png" alt="">
+                    <h2 class="section-title">590</h2>
+                    <p class="section-description">Clients Worked</p>
+                </div>
+                <div class="service">
+                    <img src="./images/icons/email.png" alt="">
+                    <h2 class="section-title">22578</h2>
+                    <p class="section-description">Email Send</p>
+                </div>
+              </div>
+        </section>
+
+        <section>
+              <div class="sponsor">
+                   <h3 class="section-title">Our Sponsors</h3>
+                   <p class="section-description">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration.</p>
+                   <div class="our-sponsors">
+                          <img src="./images/sponsors/spotify.png" alt="">
+                          <img src="./images/sponsors/amazon.png" alt="">
+                          <img src="./images/sponsors/google.png" alt="">
+                          <img src="./images/sponsors/telerama.png" alt="">
+                          <img src="./images/sponsors/figma.png" alt="">
+                   </div>
+              </div>
+        </section>
     </main>
+
+    <footer>
+         <div class="footer container">
+             <p class="section-description"> All rights reserved copyright@2023 startup landing page design</p>
+         </div>
+    </footer>
 </body>
 
 </html>
